--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,13 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+actix-web = "4.2.1"
+tokio = {version =  "1.22.0" , features = ["macros", "rt-multi-thread"]}
+reqwest = "0.11.13"
+
+[[bin]]
+path = "src/main.rs"
+name = "zero2prod"
+
+[lib]
+path = "src/lib.rs"
