--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,10 @@ edition = "2021"
 actix-web = "4.2.1"
 tokio = {version =  "1.22.0" , features = ["macros", "rt-multi-thread"]}
 reqwest = "0.11.13"
+serde = { version = "1.0.147", features = ["derive"] }
+config = "0.13.2"
+chrono = {version = "0.4.23", default-features = false, features = ["clock"]}
+uuid = {version = "1.2.2" , features = ["v4"]}
 
 [[bin]]
 path = "src/main.rs"
@@ -16,3 +20,16 @@ name = "zero2prod"
 
 [lib]
 path = "src/lib.rs"
+
+
+[dependencies.sqlx]
+version = "0.6.2"
+default-features = false
+features = [
+"runtime-tokio-rustls",
+"macros",
+"postgres",
+"uuid",
+"chrono",
+"migrate"
+]
