--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,11 @@ serde = { version = "1.0.147", features = ["derive"] }
 config = "0.13.2"
 chrono = {version = "0.4.23", default-features = false, features = ["clock"]}
 uuid = {version = "1.2.2" , features = ["v4"]}
+tracing = { version = "0.1.37", features = ["log"] }
+tracing-subscriber = { verions = "0.3.16", features = ["registry", "env-filter"] }
+tracing-bunyan-formatter = "0.3.4"
+tracing-log = "0.1.3"
+once_cell = "1.16.0"
 
 [[bin]]
 path = "src/main.rs"
