--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,8 @@ tracing-subscriber = { verions = "0.3.16", features = ["registry", "env-filter"]
 tracing-bunyan-formatter = "0.3.4"
 tracing-log = "0.1.3"
 once_cell = "1.16.0"
+secrecy = { version = "0.8.0", features = ["serde"] }
+tracing-actix-web = "0.6.2"
 
 [[bin]]
 path = "src/main.rs"
@@ -36,5 +38,6 @@ features = [
 "postgres",
 "uuid",
 "chrono",
-"migrate"
+"migrate",
+"offline"
 ]
