--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ tracing-log = "0.1.3"
 once_cell = "1.16.0"
 secrecy = { version = "0.8.0", features = ["serde"] }
 tracing-actix-web = "0.6.2"
+serde-aux = "4.1.2"
 
 [[bin]]
 path = "src/main.rs"
