--- a/spec.yaml
+++ b/spec.yaml
@@ -7,6 +7,16 @@ name: zero2prod
 # They must specify lowercase.
 # `fra` stands for Frankfurt (Germany - EU)
 region: fra
+databases:
+  # PG = Postgres
+  - engine: PG
+    # Database name
+    name: newsletter
+    # Again, let's keep the bill lean
+    num_nodes: 1
+    size: db-s-dev-database
+    # Postgres version - using the latest here
+    version: "12"
 services:
   - name: zero2prod
     # Relative to the repository root
@@ -15,7 +25,7 @@ services:
     github:
       # Depending on when you created the repository,
       # the default branch on GitHub might have been named `master`
-      branch: main
+      branch: master
       # Deploy a new version on every commit to `main`!
       # Continuous Deployment, here we come!
       deploy_on_push: true
@@ -37,3 +47,19 @@ services:
     # All incoming requests should be routed to our app
     routes:
       - path: /
+    envs:
+      - key: APP_DATABASE__USERNAME
+        scope: RUN_TIME
+        value: ${newsletter.USERNAME}
+      - key: APP_DATABASE__PASSWORD
+        scope: RUN_TIME
+        value: ${newsletter.PASSWORD}
+      - key: APP_DATABASE__HOST
+        scope: RUN_TIME
+        value: ${newsletter.HOSTNAME}
+      - key: APP_DATABASE__PORT
+        scope: RUN_TIME
+        value: ${newsletter.PORT}
+      - key: APP_DATABASE__DATABASE_NAME
+        scope: RUN_TIME
+        value: ${newsletter.DATABASE}
