--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-actix-web = "4.2.1"
-tokio = {version =  "1.22.0" , features = ["macros", "rt-multi-thread"]}
-reqwest = "0.11.13"
+actix-web = "4"
+tokio = {version =  "1" , features = ["macros", "rt-multi-thread"]}
+reqwest = "0.11"
 serde = { version = "1.0.147", features = ["derive"] }
 config = "0.13.2"
 chrono = {version = "0.4.23", default-features = false, features = ["clock"]}
@@ -21,6 +21,9 @@ once_cell = "1.16.0"
 secrecy = { version = "0.8.0", features = ["serde"] }
 tracing-actix-web = "0.6.2"
 serde-aux = "4.1.2"
+unicode-segmentation = "1.10.0"
+
+validator = "0.16.0"
 
 [[bin]]
 path = "src/main.rs"
@@ -29,6 +32,11 @@ name = "zero2prod"
 [lib]
 path = "src/lib.rs"
 
+[dev-dependencies]
+claim = "0.5.0"
+fake = "~2.3.0"
+quickcheck = "0.9.2"
+quickcheck_macros = "0.9.1"
 
 [dependencies.sqlx]
 version = "0.6.2"
