--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,6 @@ edition = "2021"
 [dependencies]
 actix-web = "4"
 tokio = {version =  "1" , features = ["macros", "rt-multi-thread"]}
-reqwest = "0.11"
 serde = { version = "1.0.147", features = ["derive"] }
 config = "0.13.2"
 chrono = {version = "0.4.23", default-features = false, features = ["clock"]}
@@ -22,8 +21,9 @@ secrecy = { version = "0.8.0", features = ["serde"] }
 tracing-actix-web = "0.6.2"
 serde-aux = "4.1.2"
 unicode-segmentation = "1.10.0"
-
+anyhow = "1.0.40"
 validator = "0.16.0"
+rand = { version = "0.8", features=["std_rng"] }
 
 [[bin]]
 path = "src/main.rs"
@@ -37,6 +37,16 @@ claim = "0.5.0"
 fake = "~2.3.0"
 quickcheck = "0.9.2"
 quickcheck_macros = "0.9.1"
+tokio = {version =  "1" , features = ["macros", "rt"]}
+wiremock = "0.5"
+serde_json = "1"
+linkify = "0.8"
+
+[dependencies.reqwest]
+version = "0.11"
+default-features = false
+# We need the `json` feature flag to serialize/deserialize JSON payloads
+features = ["json", "rustls-tls"]
 
 [dependencies.sqlx]
 version = "0.6.2"
