--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,9 +21,10 @@ secrecy = { version = "0.8.0", features = ["serde"] }
 tracing-actix-web = "0.6.2"
 serde-aux = "4.1.2"
 unicode-segmentation = "1.10.0"
-anyhow = "1.0.40"
 validator = "0.16.0"
 rand = { version = "0.8", features=["std_rng"] }
+thiserror = "1"
+anyhow = "1"
 
 [[bin]]
 path = "src/main.rs"
