--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ tokio = {version =  "1" , features = ["macros", "rt-multi-thread"]}
 serde = { version = "1.0.147", features = ["derive"] }
 config = "0.13.2"
 chrono = {version = "0.4.23", default-features = false, features = ["clock"]}
-uuid = {version = "1.2.2" , features = ["v4"]}
+uuid = { version = "1", features = ["v4", "serde"] }
 tracing = { version = "0.1.37", features = ["log"] }
 tracing-subscriber = { verions = "0.3.16", features = ["registry", "env-filter"] }
 tracing-bunyan-formatter = "0.3.4"
@@ -25,6 +25,17 @@ validator = "0.16.0"
 rand = { version = "0.8", features=["std_rng"] }
 thiserror = "1"
 anyhow = "1"
+base64 = "0.13"
+argon2 = { version = "0.4", features = ["std"] }
+urlencoding = "2"
+htmlescape = "0.3"
+hmac = { version = "0.12", features = ["std"] }
+sha2 = "0.10"
+hex = "0.4"
+actix-web-flash-messages = { version = "0.4", features = ["cookies"] }
+actix-session = { version = "0.6", features = ["redis-rs-tls-session"] }
+serde_json = "1"
+actix-web-lab = "0.16"
 
 [[bin]]
 path = "src/main.rs"
@@ -47,7 +58,7 @@ linkify = "0.8"
 version = "0.11"
 default-features = false
 # We need the `json` feature flag to serialize/deserialize JSON payloads
-features = ["json", "rustls-tls"]
+features = ["json", "rustls-tls", "cookies"]
 
 [dependencies.sqlx]
 version = "0.6.2"
