--- a/Cargo.toml
+++ b/Cargo.toml
@@ -53,6 +53,7 @@ tokio = {version =  "1" , features = ["macros", "rt"]}
 wiremock = "0.5"
 serde_json = "1"
 linkify = "0.8"
+serde_urlencoded = "0.7.1"
 
 [dependencies.reqwest]
 version = "0.11"
